fix footer logo display issue on iphone X

--- a/css/style.css
+++ b/css/style.css
@@ -1511,6 +1511,11 @@ header {
     margin-bottom: 40px;
 }
 
+.footer-img {
+    width: 100%;
+    height: auto;
+}
+
 .footer-logo>a>img {
     max-height: 80px;
 }
